demo/demo_app/side_nav_demo/side-nav-demo.component.scss
@import "./../../../src/core/colors";
@import "./../../../src/core/mixins";

.left-nav{

	//gross
	& > cdl-nested-view > .nested-view > cdl-nested-view-item > li > .item-wrapper > .item {
		margin-left: 0 !important;
		padding:0;
		background-color: $gray70;
		color: $white;
			cdl-glyphicon {
				fill: $white;
			}
			.side-nav-glyph {
				display: inline-block;
				padding: 14px;
				background: $blue50;
			}
			.side-nav-item {
				padding-left: 20px;
			}
		& > .arrow {
			position: relative;
			float: right;
			top: 16px;
			fill: $white;
		}
	}
	& > cdl-nested-view > .nested-view > cdl-nested-view-item > li > .item-wrapper {
		border-left: none;
		&.selected > .item{
			background-color: $blue50;
		}

	}

//nested sub menu items
	.item-wrapper{

		div.item {
			background: white;
			font-weight: 600;
			margin-left: 0!important;
			padding-left: 44px;


			.side-nav-glyph {
				display: none;
			}
		}
        @include hover-blue;

	}
	.nest-view .open {
		cdl-nested-view-item {
			.item-wrapper{
				.item{
				background-color: $white;
				}
			}
		}
	}
	@include unselectable;
}

